--- a/server/package.json
+++ b/server/package.json
@@ -58,7 +58,9 @@
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
+    "@adonisjs/mail": "8.2.1",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/view": "^6.2.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
